Panorama: bugfix

BUG:314244
FIXED-IN: 3.0.0